fixing spacing of unifyHeader

--- a/app/styles/v2/partials/components/viewPageGallery/_viewPageGallery.scss
+++ b/app/styles/v2/partials/components/viewPageGallery/_viewPageGallery.scss
@@ -78,7 +78,7 @@
 }
 
 @include to-breakpoint($small-break){
-	.postAdHeader{
+	.post-ad-header{
 		margin-top: -1em;
 	}
 	.inZoomMode{
